--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 *.lo
 *.o
 *.obj
+bin
+obj
 
 # Precompiled Headers
 *.gch
@@ -26,7 +28,10 @@
 *.a
 *.lib
 
+
 # Executables
 *.exe
 *.out
 *.app
+*.csproj.user
+*.suo
