--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,8 +18,8 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore ./src/Genocs.GithubAction.WebApi
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build ./src/Genocs.GithubAction.WebApi --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test ./src/Genocs.GithubAction.WebApi --no-build --verbosity normal
