--- a/src/Genocs.GithubAction.WebApi/Genocs.GithubAction.WebApi/Genocs.GithubAction.WebApi.csproj
+++ b/src/Genocs.GithubAction.WebApi/Genocs.GithubAction.WebApi/Genocs.GithubAction.WebApi.csproj
@@ -9,6 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Genocs.Core" Version="1.0.2" />
+    <PackageReference Include="Genocs.QRCodeLibrary" Version="2.0.69" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
