--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,9 +2,9 @@ name: .NET
 
 on:
   push:
-    branches: [ main ]
+    branches: [ development ]
   pull_request:
-    branches: [ main ]
+    branches: [ development ]
 
 jobs:
   build:
@@ -13,13 +13,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 6.0.x
+        
     - name: Restore dependencies
       run: dotnet restore ./src/Genocs.GithubAction.WebApi
+      
     - name: Build
       run: dotnet build ./src/Genocs.GithubAction.WebApi --no-restore
+      
     - name: Test
       run: dotnet test ./src/Genocs.GithubAction.WebApi --no-build --verbosity normal
