--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Build the Docker image
-        run: docker build . --file ./src/Genocs.GithubAction.WebApi/Genocs.GithubAction.WebApi/Dockerfile --tag my-image-name:$(date +%s)
+        run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
         
   # Second job (Should happend after the previous one is completd)
   deploy:
